--- a/KinectHandTracking/MainWindow.xaml
+++ b/KinectHandTracking/MainWindow.xaml
@@ -28,11 +28,15 @@
                     <TextBlock Name="tblHandBothStatus" Text="-" Style="{StaticResource StateStyle}" FontSize="20" />
                 </StackPanel>
             </StackPanel>
-            <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" HorizontalAlignment="Right">
-                <CheckBox x:Name="showColorCamera" Content="Camera" ClickMode="Hover" Foreground="White" Margin="0,10,10,10" IsChecked="True" />
-                <CheckBox x:Name="showSkeleton" Content="Skeleton" ClickMode="Hover" Foreground="White" Margin="0,10,10,10" />
-                <CheckBox x:Name="enableControl" Content="Control" ClickMode="Hover" Foreground="White" Margin="0,10,10,10" IsChecked="True" />
-            </StackPanel>
         </Grid>
+
+        <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" HorizontalAlignment="Right" Background="#CC000000">
+            <CheckBox x:Name="showFaceProperty" Content="Face Property" ClickMode="Hover" Foreground="White" Margin="0,10,10,10" />
+            <CheckBox x:Name="drawFacePoint" Content="Face Point" ClickMode="Hover" Foreground="White" Margin="0,10,10,10" />
+            <CheckBox x:Name="processFacialData" Content="Facial Recognition" ClickMode="Hover" Foreground="White" Margin="0,10,10,10" />
+            <CheckBox x:Name="showColorCamera" Content="Camera" ClickMode="Hover" Foreground="White" Margin="0,10,10,10" IsChecked="True" />
+            <CheckBox x:Name="showSkeleton" Content="Skeleton" ClickMode="Hover" Foreground="White" Margin="0,10,10,10" />
+            <CheckBox x:Name="enableControl" Content="Control" ClickMode="Hover" Foreground="White" Margin="0,10,10,10" IsChecked="True" />
+        </StackPanel>
     </Grid>
 </Window>
