--- a/KinectHandTracking/MainWindow.xaml
+++ b/KinectHandTracking/MainWindow.xaml
@@ -10,13 +10,32 @@
             </Grid>
         </Viewbox>
 
-        <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" HorizontalAlignment="Right" Background="#CC000000">
-            <CheckBox x:Name="showFaceProperty" Content="Face Property" ClickMode="Hover" Foreground="White" Margin="0,10,10,10" />
-            <CheckBox x:Name="drawFacePoint" Content="Face Point" ClickMode="Hover" Foreground="White" Margin="0,10,10,10" />
-            <CheckBox x:Name="processFacialData" Content="Facial Recognition" ClickMode="Hover" Foreground="White" Margin="0,10,10,10" />
-            <CheckBox x:Name="showColorCamera" Content="Camera" ClickMode="Hover" Foreground="White" Margin="0,10,10,10" IsChecked="True" />
-            <CheckBox x:Name="showSkeleton" Content="Skeleton" ClickMode="Hover" Foreground="White" Margin="0,10,10,10" />
-            <CheckBox x:Name="enableControl" Content="Control" ClickMode="Hover" Foreground="White" Margin="0,10,10,10" IsChecked="True" />
-        </StackPanel>
+        <TextBlock VerticalAlignment="Top" HorizontalAlignment="Right" Margin="10" FontSize="25" Padding="20,10">
+            Settings
+            <TextBlock.ContextMenu>
+                <ContextMenu>
+                    <MenuItem x:Name="showColorCamera" IsCheckable="True" Header="Camera" IsChecked="True"/>
+                    <MenuItem x:Name="showSkeleton" IsCheckable="True" Header="Skeleton"/>
+                    <Separator></Separator>
+                    <MenuItem x:Name="enableControl" IsCheckable="True" Header="Control" IsChecked="True"/>
+                    <Separator></Separator>
+                    <MenuItem x:Name="processFacialData" IsCheckable="True" Header="Process Facial Data"/>
+                    <MenuItem x:Name="drawFacePoint" IsCheckable="True" Header="Face Point"/>
+                    <MenuItem x:Name="showFaceProperty" IsCheckable="True" Header="Face Property"/>
+                </ContextMenu>
+            </TextBlock.ContextMenu>
+            <TextBlock.Style>
+                <Style TargetType="TextBlock">
+                    <Setter Property="TextBlock.Background" Value="#CC000000" />
+                    <Setter Property="TextBlock.Foreground" Value="White" />
+                    <Style.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="TextBlock.Background" Value="White" />
+                            <Setter Property="TextBlock.Foreground" Value="#CC000000" />
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </TextBlock.Style>
+        </TextBlock>
     </Grid>
 </Window>
