--- a/KinectHandTracking/MainWindow.xaml
+++ b/KinectHandTracking/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="KinectHandTracking.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Kinect 2.0 Hand Tracking" Height="800" Width="1200" Loaded="Window_Loaded" Closed="Window_Closed">
+        Title="Kinect 2.0 Interaction" Height="800" Width="1200" Loaded="Window_Loaded" Closed="Window_Closed">
     <Grid Background="Black">
         <Viewbox>
             <Grid Width="1920" Height="1080">
@@ -10,32 +10,46 @@
             </Grid>
         </Viewbox>
 
-        <TextBlock VerticalAlignment="Top" HorizontalAlignment="Right" Margin="10" FontSize="25" Padding="20,10">
+        <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10" >
+            <TextBlock Foreground="White" Background="#CC000000" FontSize="20" Padding="15,8"><Run FontWeight="DemiBold">Kinect 2.0</Run> Interaction</TextBlock>
+            <TextBlock HorizontalAlignment="Left" Foreground="Black" Background="#CCFFFFFF" FontSize="12" Padding="15,5">Developed by <Bold>ARM</Bold></TextBlock>
+        </StackPanel>
+
+        <StackPanel VerticalAlignment="Top" HorizontalAlignment="Right" Margin="10" >
+            <TextBlock FontSize="20" Padding="15,8">
             Settings
-            <TextBlock.ContextMenu>
-                <ContextMenu>
-                    <MenuItem x:Name="showColorCamera" IsCheckable="True" Header="Camera" IsChecked="True"/>
-                    <MenuItem x:Name="showSkeleton" IsCheckable="True" Header="Skeleton"/>
-                    <Separator></Separator>
-                    <MenuItem x:Name="enableControl" IsCheckable="True" Header="Control" IsChecked="True"/>
-                    <Separator></Separator>
-                    <MenuItem x:Name="processFacialData" IsCheckable="True" Header="Process Facial Data"/>
-                    <MenuItem x:Name="drawFacePoint" IsCheckable="True" Header="Face Point"/>
-                    <MenuItem x:Name="showFaceProperty" IsCheckable="True" Header="Face Property"/>
-                </ContextMenu>
-            </TextBlock.ContextMenu>
-            <TextBlock.Style>
-                <Style TargetType="TextBlock">
-                    <Setter Property="TextBlock.Background" Value="#CC000000" />
-                    <Setter Property="TextBlock.Foreground" Value="White" />
-                    <Style.Triggers>
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="TextBlock.Background" Value="White" />
-                            <Setter Property="TextBlock.Foreground" Value="#CC000000" />
-                        </Trigger>
-                    </Style.Triggers>
-                </Style>
-            </TextBlock.Style>
-        </TextBlock>
+                <TextBlock.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem x:Name="showColorCamera" IsCheckable="True" Header="Camera" IsChecked="True"/>
+                        <MenuItem x:Name="showSkeleton" IsCheckable="True" Header="Skeleton"/>
+                        <Separator></Separator>
+                        <MenuItem x:Name="enableControl" IsCheckable="True" Header="Control" IsChecked="True"/>
+                        <Separator></Separator>
+                        <MenuItem x:Name="processFacialData" IsCheckable="True" Header="Process Facial Data"/>
+                        <MenuItem x:Name="drawFacePoint" IsCheckable="True" Header="Face Point"/>
+                        <MenuItem x:Name="showFaceProperty" IsCheckable="True" Header="Face Property"/>
+                    </ContextMenu>
+                </TextBlock.ContextMenu>
+                <TextBlock.Style>
+                    <Style TargetType="TextBlock">
+                        <Setter Property="TextBlock.Background" Value="#CC000000" />
+                        <Setter Property="TextBlock.Foreground" Value="White" />
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="TextBlock.Background" Value="White" />
+                                <Setter Property="TextBlock.Foreground" Value="#CC000000" />
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </TextBlock.Style>
+            </TextBlock>
+        </StackPanel>
+
+        <StackPanel VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="10" >
+        </StackPanel>
+        
+        <StackPanel VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="10" >
+        </StackPanel>
+
     </Grid>
 </Window>
